AR Switching Platform

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Packages/com.ptc.vuforia.engine-10.14.4.tgz
+
+.idea/
